flux-webhook/ingressroute-flux-webhook.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook.${dns_domain}
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-webhook.${dns_domain}`)
      kind: Rule
      services:
        - name: webhook-receiver
          kind: Service
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-${dns_domain}
